@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-09-22T01:22:15Z",
+  "timestamp" : "2025-09-23T01:15:56Z",
   "count_outdated" : 1951,
   "uniques_outdated" : 1190,
-  "count" : 1973,
-  "uniques" : 1211,
+  "count" : 1975,
+  "uniques" : 1213,
   "clones" : [
     {
       "timestamp": "2025-09-10T00:00:00Z",
@@ -94,6 +94,24 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-09-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-09-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
