@@ -1,5 +1,5 @@
 {
-  "count": 22,
+  "count": 24,
   "uniques": 14,
   "clones": [
     {
@@ -51,6 +51,16 @@
       "timestamp": "2025-09-21T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-09-22T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-09-23T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
